--- a/index.html
+++ b/index.html
@@ -12,8 +12,220 @@
     <meta property="twitter:image" content="#"/>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <link rel="stylesheet" href="resource/css/reset.css" />
+    <link rel="stylesheet" href="resource/css/index.css" />
+    <link
+  rel="stylesheet"
+  href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+/>
     <script src="resource/lib/jquery-3.5.1-slim.js"></script>
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <script src="/resource/js/index.js"></script>
   </head>
   <body>
+    <header>
+      <div class="container">
+        <a href="/" class="logo"><img src="/resource/img/pc/header/header_logo.png" /></a>
+        <div class="menu">
+          <p class="menu__item" id="socialMission">SOCIAL MISSION</p>
+          <p class="menu__item" id="universe">UNIVERSE</p>
+          <p class="menu__item" id="funding">FUNDING</p>
+          <p class="menu__item" id="roadmap">ROADMAP</p>
+          <p class="menu__item" id="benefits">BENEFITS</p>
+          <p class="menu__item" id="teams">TEAMS</p>
+          <p class="menu__item" id="news">NEWS</p>
+          <p class="menu__item" id="shop">SHOP</p>
+        </div>
+        <div class="menu">
+          <div class="sub">
+            <p class="sub__item sns">SNS<span>▼</span></p>
+            <p class="list">
+              <a href="#discord">DISCORD</a>
+              <a href="#twiter">TWITER</a>
+              <a href="#instagram">INSTAGRAM</a>
+            </p>
+          </div>
+          <div class="sub">
+            <p class="sub__item global">
+              <img src="/resource/img/pc/header/global-line.png" />
+            </p>
+            <p class="list">
+              <a href="#kor">KOR</a>
+              <a href="#eng">ENG</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </header>
+    <section class="social__mission">
+      <div class="container">
+        <p class="title">SOCIAL MISSION</p>
+        <p class="content"><strong>Would you protect the disappearing beauty of Korea by becoming a "tallower"?</strong></p>
+        <p class="content mt">Hello, this letter is SOS to you.</p>
+        <p class="content">Did you know that <strong>about 24% of Korea's intangible cultural heritage is in danger</strong></p>
+        <p class="content">
+          of being cut off due to difficulties such as living? For hundreds of years, our time could be lost overnight.
+        </p>
+        <p class="content mt">We realized the seriousness of this problem,</p>
+        <p class="content">and we created a small town called “Nower”.</p>
+        <p class="content">Nower is protecting the disappearing beauty of Korea.</p>
+        <p class="content"><strong>Please protect our culture in “Nower".</strong></p>
+        <p class="accept">
+          ACCEPT
+        </p>
+      </div>
+      <img src="/resource/img/pc/social_mission/cloud.png" class="clude clude-1">
+      <img src="/resource/img/pc/social_mission/cloud.png" class="clude clude-2">
+      <img src="/resource/img/pc/social_mission/house.png" class="house__bottom">
+      <img src="/resource/img/pc/social_mission/cloud_1.png" class="clude__bottom">
+    </section>
+    <section class="universe">
+      <div class="title">
+        <div class="underline">
+          <p class="luckiest hover-rotate">
+            UNIVERSE
+          </p>
+        </div>
+      </div>
+      <p class="content">
+        The Beautiful and Mysterious Adventures of<br>“Mr.TAL’ and the ‘Guardians’ in “Nower”
+      </p>
+      <div class="carton">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="tab">
+              <p class="season1 on">
+                <strong class="luckiest">SEASON 01</strong>
+                <span>A lifelong friend I met in dystopia</span>
+              </p>
+              <p class="season2">
+                <strong class="luckiest">SEASON 02</strong>
+                <span>COMING SOON</span>
+              </p>
+            </div>
+            <div class="container">
+              <img src="/resource/img/pc/universe/u_img_1.jpg">
+              <div class="text">
+                2xxx.<br><br>Walking in a gray city in a world where human<br>emotions and cultures are not respected and excluded.
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="tab">
+              <p class="season1 on">
+                <strong class="luckiest">SEASON 01</strong>
+                <span>A lifelong friend I met in dystopia</span>
+              </p>
+              <p class="season2">
+                <strong class="luckiest">SEASON 02</strong>
+                <span>COMING SOON</span>
+              </p>
+            </div>
+            <div class="container">
+              <img src="/resource/img/pc/universe/u_img_1.jpg">
+              <div class="text">
+                2xxx.<br><br>Walking in a gray city in a world where human<br>emotions and cultures are not respected and excluded.
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="tab">
+              <p class="season1 on">
+                <strong class="luckiest">SEASON 01</strong>
+                <span>A lifelong friend I met in dystopia</span>
+              </p>
+              <p class="season2">
+                <strong class="luckiest">SEASON 02</strong>
+                <span>COMING SOON</span>
+              </p>
+            </div>
+            <div class="container">
+              <img src="/resource/img/pc/universe/u_img_1.jpg">
+              <div class="text">
+                2xxx.<br><br>Walking in a gray city in a world where human<br>emotions and cultures are not respected and excluded.
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="tab">
+              <p class="season1 on">
+                <strong class="luckiest">SEASON 01</strong>
+                <span>A lifelong friend I met in dystopia</span>
+              </p>
+              <p class="season2">
+                <strong class="luckiest">SEASON 02</strong>
+                <span>COMING SOON</span>
+              </p>
+            </div>
+            <div class="container">
+              <img src="/resource/img/pc/universe/u_img_1.jpg">
+              <div class="text">
+                2xxx.<br><br>Walking in a gray city in a world where human<br>emotions and cultures are not respected and excluded.
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="tab">
+              <p class="season1 on">
+                <strong class="luckiest">SEASON 01</strong>
+                <span>A lifelong friend I met in dystopia</span>
+              </p>
+              <p class="season2">
+                <strong class="luckiest">SEASON 02</strong>
+                <span>COMING SOON</span>
+              </p>
+            </div>
+            <div class="container">
+              <img src="/resource/img/pc/universe/u_img_1.jpg">
+              <div class="text">
+                2xxx.<br><br>Walking in a gray city in a world where human<br>emotions and cultures are not respected and excluded.
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="tab">
+              <p class="season1 on">
+                <strong class="luckiest">SEASON 01</strong>
+                <span>A lifelong friend I met in dystopia</span>
+              </p>
+              <p class="season2">
+                <strong class="luckiest">SEASON 02</strong>
+                <span>COMING SOON</span>
+              </p>
+            </div>
+            <div class="container">
+              <img src="/resource/img/pc/universe/u_img_1.jpg">
+              <div class="text">
+                2xxx.<br><br>Walking in a gray city in a world where human<br>emotions and cultures are not respected and excluded.
+              </div>
+            </div>
+          </div>
+        </div>
+        <i class="button prev"></i>
+        <i class="button next"></i>
+      </div>
+    </section>
+    <section class="funding">
+      <div class="title">
+        <div class="underline">
+          <p class="luckiest hover-rotate">
+            FUNDING
+          </p>
+        </div>
+      </div>
+      <p class="content">
+        In Nower, there are <strong>“Mr.TAL” and “5 – guardian” defending Mr.</strong><br>
+        TAL.Become a ‘Mr.TAL’ and go on an adventure with the Guardians<br>
+        The “NFT” reflects the birth background and theier own characteristics of ‘Mr. TAL’ and ‘Guardians’.<br>
+        <strong>The only Guardians in the world will be there for you forever, the owner.</strong>
+      </p>
+      <p class="subcontent">
+        Each Guardians will be opened upon the success of the ‘Tallower Mission’<br>
+        and will benefit from the NFT combination
+      </p>
+    </section>
+    <section class="roadmap">
+      
+    </section>
   </body>
 </html>
+       
