--- a/index.html
+++ b/index.html
@@ -222,9 +222,458 @@
         Each Guardians will be opened upon the success of the ‘Tallower Mission’<br>
         and will benefit from the NFT combination
       </p>
+      <div class="swiper-container">
+        <div class="left-swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <p class="swiper__title">The guide on the way</p>
+              <p class="swiper__content">The “Seokma” is the <strong>first Guardian</strong> to meet in Nower.<br>
+                He likes challenges and has a brave personality “Seokma” show you the way “Mr. TAL” wants to go.</p>
+              <div class="swiper__buttons">
+                <a>Buy on<br>Opensea</a>
+                <a>Go to<br>Tumblbug</a>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <p class="swiper__title">The guide on the way</p>
+              <p class="swiper__content">The “Seokma” is the <strong>first Guardian</strong> to meet in Nower.<br>
+                He likes challenges and has a brave personality “Seokma” show you the way “Mr. TAL” wants to go.</p>
+              <div class="swiper__buttons">
+                <a>Buy on<br>Opensea</a>
+                <a>Go to<br>Tumblbug</a>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <p class="swiper__title">The guide on the way</p>
+              <p class="swiper__content">The “Seokma” is the <strong>first Guardian</strong> to meet in Nower.<br>
+                He likes challenges and has a brave personality “Seokma” show you the way “Mr. TAL” wants to go.</p>
+              <div class="swiper__buttons">
+                <a>Buy on<br>Opensea</a>
+                <a>Go to<br>Tumblbug</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="right-swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="/resource/img/pc/funding/guardian_jin.png" />
+              <p class="info">Seokma/ Tomb of the Joseon Dynasty / Seoul and Gyeonggi Province</p>
+            </div>
+            <div class="swiper-slide">
+              <img src="/resource/img/pc/funding/guardian_seokma.png" />
+              <p class="info">Seokma/ Tomb of the Joseon Dynasty / Seoul and Gyeonggi Province</p>
+            </div>
+            <div class="swiper-slide">
+              <img src="/resource/img/pc/funding/guardian_jin.png" />
+              <p class="info">Seokma/ Tomb of the Joseon Dynasty / Seoul and Gyeonggi Province</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <section class="roadmap">
-      
+      <div class="title">
+        <div class="underline">
+          <p class="luckiest hover-rotate">
+            ROAD MAP
+          </p>
+        </div>
+      </div>
+      <div class="content">
+        <img class="background" src="/resource/img/pc/roadmap/r_bg_1.png">
+        <div class="row">
+          <p class="item color purple">Intangible Cultural Heritage Support</p>
+          <div class="item basic">
+            <p class="title">a conservation society Annual operating expenses support</p>
+            <p class="subtitle">20 organizations</p>
+          </div>
+          <div class="item basic">
+            <p class="title">international performances exhibitions Planning and production support</p>
+            <p class="subtitle">5 times a year</p>
+          </div>
+          <div class="item basic">
+            <p class="title">Operation of Digital Transformation Education</p>
+            <p class="subtitle">100 organizations</p>
+          </div>
+          <div class="item basic">
+            <p class="title">Production and transmission of 'OTT' series and public service advertisements</p>
+            <p class="subtitle">Link to OTT Platforms</p>
+          </div>
+          <div class="item basic">
+            <p class="title">Discovering the transcripts andscholarship support</p>
+            <p class="subtitle">30 people</p>
+          </div>
+        </div>
+        <div class="row">
+          <p class="item color blue">Extend Tallower Benefits</p>
+          <div class="item basic">
+            <p class="title">Expanding membership services</p>
+            <p class="subtitle">5 times a year</p>
+          </div>
+          <div class="item basic">
+            <p class="title">Expanding the 'NFT' Worldview</p>
+            <p class="subtitle">Season 2 will be released</p>
+          </div>
+          <div class="item basic">
+            <p class="title">Based on Toconomics App Service Development</p>
+          </div>
+          <p class="download">
+            <a class="container">
+              Roadmap 2.0
+            </a>
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="benefit">
+      <div class="title">
+        <div class="underline">
+          <p class="luckiest hover-rotate">
+            BENEFIT
+          </p>
+        </div>
+      </div> 
+      <p class="content medium">Benefits by membership grade can be changed later, and changes will be notified through the notice.</p>
+      <p class="content bold">Membership benefits of grades 4 to 6 will be applied to those who through Korean won donations.</p>
+      <div class="caption">
+        <p><i class="mrtal"></i>미스터 탈</p>
+        <p><i class="guardians"></i>가디언즈</p>
+      </div>
+      <div class="cards">
+        <div class="column">
+          <div class="card yellow">
+            <img class="star" src="/resource/img/pc/benefits/yellow.png">
+            <p class="top">Grade 1</p>
+            <div class="icons">
+              <i class="mrtal"></i>
+            </div>
+            <div class="icons mb">
+              <i class="guardians"></i>
+              <i class="guardians"></i>
+              <i class="guardians"></i>
+              <i class="guardians"></i>
+              <i class="guardians"></i>
+            </div>
+            <div class="info">
+              <div class="item">
+                <p class="medium">shop pass</p>
+                <p class="light"></p>
+              </div>
+              <div class="item">
+                <p class="medium">Tour voucher</p>
+                <p class="light">(2 times a year)</p>
+              </div>
+              <div class="item">
+                <p class="medium">One Day Class pass</p>
+                <p class="light">(2 times a year)</p>
+              </div>
+              <div class="item">
+                <p class="medium">invitation to perform in Korea</p>
+                <p class="light">(VIP invitation)</p>
+              </div>
+              <div class="item">
+                <p class="medium">NFT IIP (Intellectual Property)</p>
+                <p class="light">(secondary processing)</p>
+              </div>
+              <div class="item">
+                <p class="medium">craft subscription</p>
+                <p class="light">(Draw lots)</p>
+              </div>
+              <div class="item">
+                <p class="medium">invitation perform</p>
+                <p class="light">(Draw lots)</p>
+              </div>
+            </div>
+          </div>
+          <div class="card orange">
+            <img class="star" src="/resource/img/pc/benefits/orange.png">
+            <p class="top">Grade 2</p>
+            <div class="icons">
+              <i class="mrtal"></i>
+            </div>
+            <div class="icons mb">
+              <i class="guardians"></i>
+              <i class="guardians"></i>
+              <i class="guardians"></i>
+              <i class="guardians"></i>
+            </div>
+            <div class="info">
+              <div class="item">
+                <p class="medium">shop pass</p>
+                <p class="light"></p>
+              </div>
+              <div class="item">
+                <p class="medium">Tour voucher</p>
+                <p class="light">(2 times a year)</p>
+              </div>
+              <div class="item">
+                <p class="medium">One Day Class pass</p>
+                <p class="light">(2 times a year)</p>
+              </div>
+              <div class="item">
+                <p class="medium">invitation to perform in Korea</p>
+                <p class="light">(VIP invitation)</p>
+              </div>
+              <div class="item">
+                <p class="medium">NFT IIP (Intellectual Property)</p>
+                <p class="light">(secondary processing)</p>
+              </div>
+              <div class="item">
+                <p class="medium">craft subscription</p>
+                <p class="light">(Draw lots)</p>
+              </div>
+              <div class="item">
+                <p class="medium">invitation perform</p>
+                <p class="light">(Draw lots)</p>
+              </div>
+            </div>
+          </div>
+          <div class="card blue">
+            <img class="star" src="/resource/img/pc/benefits/blue.png">
+            <p class="top">Grade 3</p>
+            <div class="icons">
+              <i class="mrtal"></i>
+            </div>
+            <div class="icons mb">
+              <i class="guardians"></i>
+              <i class="guardians"></i>
+              <i class="guardians"></i>
+            </div>
+            <div class="info">
+              <div class="item">
+                <p class="medium">shop pass</p>
+                <p class="light"></p>
+              </div>
+              <div class="item">
+                <p class="medium">Tour voucher</p>
+                <p class="light">(2 times a year)</p>
+              </div>
+              <div class="item">
+                <p class="medium">One Day Class pass</p>
+                <p class="light">(2 times a year)</p>
+              </div>
+              <div class="item">
+                <p class="medium">invitation to perform in Korea</p>
+                <p class="light">(VIP invitation)</p>
+              </div>
+              <div class="item">
+                <p class="medium">NFT IIP (Intellectual Property)</p>
+                <p class="light">(secondary processing)</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="column">
+          <div class="card lightblue">
+            <img class="star" src="/resource/img/pc/benefits/lightblue.png">
+            <p class="top">Grade 4</p>
+            <div class="icons mb">
+              <i class="guardians"></i>
+              <i class="guardians"></i>
+              <i class="guardians"></i>
+            </div>
+            <div class="info">
+              <div class="item">
+                <p class="medium">shop pass</p>
+                <p class="light"></p>
+              </div>
+              <div class="item">
+                <p class="medium">Tour voucher</p>
+                <p class="light">(2 times a year)</p>
+              </div>
+              <div class="item">
+                <p class="medium">One Day Class pass</p>
+                <p class="light">(2 times a year)</p>
+              </div>
+              <div class="item">
+                <p class="medium">invitation to perform in Korea</p>
+                <p class="light">(VIP invitation)</p>
+              </div>
+            </div>
+          </div>
+          <div class="card pink">
+            <img class="star" src="/resource/img/pc/benefits/pink.png">
+            <p class="top">Grade 5</p>
+            <div class="icons mb">
+              <i class="guardians"></i>
+              <i class="guardians"></i>
+            </div>
+            <div class="info">
+              <div class="item">
+                <p class="medium">shop pass</p>
+                <p class="light"></p>
+              </div>
+              <div class="item">
+                <p class="medium">Tour voucher</p>
+                <p class="light">(2 times a year)</p>
+              </div>
+              <div class="item">
+                <p class="medium">One Day Class pass</p>
+                <p class="light">(2 times a year)</p>
+              </div>
+            </div>
+          </div>
+          <div class="card green">
+            <img class="star" src="/resource/img/pc/benefits/green.png">
+            <p class="top">Grade 6</p>
+            <div class="icons mb">
+              <i class="guardians"></i>
+            </div>
+            <div class="info">
+              <div class="item">
+                <p class="medium">shop pass</p>
+                <p class="light"></p>
+              </div>
+              <div class="item">
+                <p class="medium">Tour voucher</p>
+                <p class="light">(2 times a year)</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <p class="bottom">
+        “2022 KOREA Talowin-day (scheduled for the end of the October)” ‘sadmission tickets will be provided to All tallower holders.<br>
+        (* which  festival pray for UNESCO’s registration of the intangible heritage ‘Talchum’ )<br>
+        Tour vouchers are provided twice a year regardless of grade.<br>
+        If you donate in Korean won, membership benefits of grades 4-6 will be applied depending on the donation<br>
+        <strong>(* donation 20,000 won / 30,000 won / 50,000 won per month)</strong>
+      </p>
+      <div class="buttons">
+        <p>Go to the opensea</p>
+        <p>Buy the Ethereum</p>
+      </div>
+    </section>
+    <section class="teams">
+      <div class="title">
+        <div class="underline">
+          <p class="luckiest hover-rotate">
+            BENEFIT
+          </p>
+        </div>
+      </div> 
+      <p class="content">
+        This project will be led by the <strong>social venture</strong> and <strong>non-profit start-up,</strong><br>
+        <strong>the YBSEDU Social Cooperative.</strong>
+      </p>
+      <div class="container">
+        <div class="box">
+          <img src="/resource/img/pc/teams/m_logo.jpg" />
+          <img src="/resource/img/pc/teams/google_logo.jpg" />
+          <img src="/resource/img/pc/teams/ramda256.jpg" />
+          <div class="circle">Sponsor</div>
+        </div>
+        <div class="box center">
+          <img src="/resource/img/pc/teams/ybs_logo.jpg" />
+          <p>YBSEDU Social<br>Cooperative</p>
+          <div class="circle">Operating</div>
+        </div>
+        <div class="box">
+          <p>Korean Peninsula<br>Development Union</p>
+          <p>Pyongyang Geommu<br>Preservation Society</p>
+          <p>Preservation Society<br>for Gangnyeong Talchum</p>
+          <p>Hansung University<br>Design&Art Institute</p>
+          <div class="circle">Partner</div>
+
+        </div>
+      </div>
+    </section>
+    <section class="news">
+      <div class="title">
+        <div class="underline">
+          <p class="luckiest hover-rotate">
+            NEWS
+          </p>
+        </div>
+      </div> 
+      <div class="list">
+        <div class="item">
+          <div class="top">
+            <div class="left">
+              <p class="day">14</p>
+              <p class="yearmonth">2022.06</p>
+            </div>
+            <p class="center">[사업선정] AVPN 디지털혁신기금 선정</p>
+            <span class="arrow">▼</span>
+          </div>
+          <div class="bottom">
+            가나다
+          </div>
+        </div>
+        <div class="item">
+          <div class="top">
+            <div class="left">
+              <p class="day">14</p>
+              <p class="yearmonth">2022.06</p>
+            </div>
+            <p class="center">[사업선정] AVPN 디지털혁신기금 선정</p>
+            <span class="arrow">▼</span>
+          </div>
+          <div class="bottom">
+            가나다
+          </div>
+        </div>
+        <div class="item">
+          <div class="top">
+            <div class="left">
+              <p class="day">14</p>
+              <p class="yearmonth">2022.06</p>
+            </div>
+            <p class="center">[사업선정] AVPN 디지털혁신기금 선정</p>
+            <span class="arrow">▼</span>
+          </div>
+          <div class="bottom">
+            가나다
+          </div>
+        </div>
+        <div class="item">
+          <div class="top">
+            <div class="left">
+              <p class="day">14</p>
+              <p class="yearmonth">2022.06</p>
+            </div>
+            <p class="center">[사업선정] AVPN 디지털혁신기금 선정</p>
+            <span class="arrow">▼</span>
+          </div>
+          <div class="bottom">
+            가나다
+          </div>
+        </div>
+        <div class="item">
+          <div class="top">
+            <div class="left">
+              <p class="day">14</p>
+              <p class="yearmonth">2022.06</p>
+            </div>
+            <p class="center">[사업선정] AVPN 디지털혁신기금 선정</p>
+            <span class="arrow">▼</span>
+          </div>
+          <div class="bottom">
+            가나다
+          </div>
+        </div>
+      </div>
+      <div class="pagination">
+        <span class="black"><<</span>
+        <span class="white"><</span>
+        <div class="page">
+          <a>1</a>
+          <a>2</a>
+          <a>3</a>
+          <a>4</a>
+          <a>5</a>
+        </div>
+        <span class="white">></span>
+        <span class="black">>></span>
+      </div>
+    </section>
+    <section class="footer">
+      <img src="/resource/img/pc/footer/f_lpgp.png" />
+      <p>
+        와이비에스에듀사회적협동조합 이사장 : 서진성 서울특별시 송파구 가락로 234 힐빌딩 2층 (우)05644<br>
+        Copyright© 2020 와이비에스에듀 사회적협동조합 All Rights Reserve
+      </p>
     </section>
   </body>
 </html>
