--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </div>
         <img data-aos="fade-left" data-aos-duration="2000" data-aos-delay="200" src="./resource/img/pc/social_mission/cloud.png" class="clude clude-1">
         <img data-aos="fade-left" data-aos-duration="2000" data-aos-delay="400" src="./resource/img/pc/social_mission/cloud.png" class="clude clude-2">
-        <img src="./resource/img/pc/social_mission/cloud_1.png" class="clude__bottom">
+        <img data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100" src="./resource/img/pc/social_mission/cloud_1.png" class="clude__bottom">
       </section>
       <section class="social__mission__mo socialMissonMo">
         <div class="container">
@@ -450,48 +450,72 @@
         <div class="swiper-container">
           <div class="left-swiper">
             <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <p class="swiper__title hidden">The guide on the way</p>
-                <p class="swiper__content hidden">The “Seokma” is the <strong>first Guardian</strong> to meet in Nower.<br>
-                  He likes challenges and has a brave personality “Seokma” show you the way “Mr. TAL” wants to go.</p>
-                <div class="swiper__buttons hidden">
-                  <a>Buy on<br>Opensea</a>
-                  <a>Go to<br>Tumblbug</a>
-                </div>
-              </div>
+
               <div class="swiper-slide">
                 <p class="swiper__title">The guide on the way</p>
                 <p class="swiper__content">The “Seokma” is the <strong>first Guardian</strong> to meet in Nower.<br>
                   He likes challenges and has a brave personality “Seokma” show you the way “Mr. TAL” wants to go.</p>
                 <div class="swiper__buttons">
                   <a>Buy on<br>Opensea</a>
-                  <a>Go to<br>Tumblbug</a>
+                  <a href=https://tumblbug.com/1stmrtal?ref=%EB%A9%94%EC%9D%B8%2F%EC%B5%9C%EA%B7%BC target="_blank">Go to<br>Tumblbug</a>
                 </div>
+                <div class="info">Seokma<br>Tomb of the Joseon Dynasty<br>Seoul and Gyeonggi Province</div>
+                <img class="bg-circle" src="./resource/img/pc/funding/f_bg_2.png" alt="">
               </div>
               <div class="swiper-slide">
                 <p class="swiper__title hidden">The guide on the way</p>
                 <p class="swiper__content hidden">The “Seokma” is the <strong>first Guardian</strong> to meet in Nower.<br>
                   He likes challenges and has a brave personality “Seokma” show you the way “Mr. TAL” wants to go.</p>
-                <div class="swiper__buttons hidden">
+                <div class="swiper__buttons">
                   <a>Buy on<br>Opensea</a>
-                  <a>Go to<br>Tumblbug</a>
+                  <a href="https://tumblbug.com/1stmrtal?ref=%EB%A9%94%EC%9D%B8%2F%EC%B5%9C%EA%B7%BC"target="_blank">Go to<br>Tumblbug</a>
                 </div>
-              </div>
-            </div>
-          </div>
-          <div class="right-swiper">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <img src="./resource/img/pc/funding/guardian_seokma.png" />
-                <p class="info">Seokma/ Tomb of the Joseon Dynasty / Seoul and Gyeonggi Province</p>
+                <div class="info hidden">Seokma<br>Tomb of the Joseon Dynasty<br>Seoul and Gyeonggi Province</div>
+                <img class="bg-circle" src="./resource/img/pc/funding/f_bg_3.png" alt="">
               </div>
               <div class="swiper-slide">
-                <div class="noimage luckiest">?</div>
-                <p class="info none">Seokma/ Tomb of the Joseon Dynasty / Seoul and Gyeonggi Province</p>
+                <p class="swiper__title hidden">The guide on the way</p>
+                <p class="swiper__content hidden">The “Seokma” is the <strong>first Guardian</strong> to meet in Nower.<br>
+                  He likes challenges and has a brave personality “Seokma” show you the way “Mr. TAL” wants to go.</p>
+                <div class="swiper__buttons">
+                  <a>Buy on<br>Opensea</a>
+                  <a href="https://tumblbug.com/1stmrtal?ref=%EB%A9%94%EC%9D%B8%2F%EC%B5%9C%EA%B7%BC"target="_blank">Go to<br>Tumblbug</a>
+                </div>
+                <div class="info hidden">Seokma<br>Tomb of the Joseon Dynasty<br>Seoul and Gyeonggi Province</div>
+                <img class="bg-circle" src="./resource/img/pc/funding/f_bg_4.png" alt="">
               </div>
               <div class="swiper-slide">
-                <div class="noimage luckiest">?</div>
-                <p class="info none">Seokma/ Tomb of the Joseon Dynasty / Seoul and Gyeonggi Province</p>
+                <p class="swiper__title hidden">The guide on the way</p>
+                <p class="swiper__content hidden">The “Seokma” is the <strong>first Guardian</strong> to meet in Nower.<br>
+                  He likes challenges and has a brave personality “Seokma” show you the way “Mr. TAL” wants to go.</p>
+                <div class="swiper__buttons">
+                  <a>Buy on<br>Opensea</a>
+                  <a href="https://tumblbug.com/1stmrtal?ref=%EB%A9%94%EC%9D%B8%2F%EC%B5%9C%EA%B7%BC"target="_blank">Go to<br>Tumblbug</a>
+                </div>
+                <div class="info hidden">Seokma<br>Tomb of the Joseon Dynasty<br>Seoul and Gyeonggi Province</div>
+                <img class="bg-circle" src="./resource/img/pc/funding/f_bg_5.png" alt="">
+              </div>
+              <div class="swiper-slide">
+                <p class="swiper__title hidden">The guide on the way</p>
+                <p class="swiper__content hidden">The “Seokma” is the <strong>first Guardian</strong> to meet in Nower.<br>
+                  He likes challenges and has a brave personality “Seokma” show you the way “Mr. TAL” wants to go.</p>
+                <div class="swiper__buttons">
+                  <a>Buy on<br>Opensea</a>
+                  <a href="https://tumblbug.com/1stmrtal?ref=%EB%A9%94%EC%9D%B8%2F%EC%B5%9C%EA%B7%BC"target="_blank">Go to<br>Tumblbug</a>
+                </div>
+                <div class="info hidden">Seokma<br>Tomb of the Joseon Dynasty<br>Seoul and Gyeonggi Province</div>
+                <img class="bg-circle" src="./resource/img/pc/funding/f_bg_6.png" alt="">
+              </div>
+              <div class="swiper-slide">
+                <p class="swiper__title hidden">The guide on the way</p>
+                <p class="swiper__content hidden">The “Seokma” is the <strong>first Guardian</strong> to meet in Nower.<br>
+                  He likes challenges and has a brave personality “Seokma” show you the way “Mr. TAL” wants to go.</p>
+                <div class="swiper__buttons">
+                  <a>Buy on<br>Opensea</a>
+                  <a href="https://tumblbug.com/1stmrtal?ref=%EB%A9%94%EC%9D%B8%2F%EC%B5%9C%EA%B7%BC"target="_blank">Go to<br>Tumblbug</a>
+                </div>
+                <div class="info hidden">Seokma<br>Tomb of the Joseon Dynasty<br>Seoul and Gyeonggi Province</div>
+                <img class="bg-circle" src="./resource/img/pc/funding/f_bg_7.png" alt="">
               </div>
             </div>
           </div>
@@ -882,7 +906,7 @@
         </div>
         <p class="bottom">
           “2022 KOREA Talowin-day (scheduled for the end of the October)” ‘sadmission tickets will be provided to All tallower holders.<br>
-          (* which  festival pray for UNESCO’s registration of the intangible heritage ‘Talchum’ )<br>
+          (* which  festival pray for UNESCO’s registration of the intangible heritage ‘Talchum’ )<br>
           Tour vouchers are provided twice a year regardless of grade.<br>
           If you donate in Korean won, membership benefits of grades 4-6 will be applied depending on the donation<br>
           <strong>(* donation 20,000 won / 30,000 won / 50,000 won per month)</strong>
@@ -1098,7 +1122,7 @@
       </div>
       <p class="bottom">
         “2022 KOREA Talowin-day (scheduled for the end of the October)” ‘sadmission tickets will be provided to All tallower holders.<br>
-        (* which  festival pray for UNESCO’s registration of the intangible heritage ‘Talchum’ )<br><br>
+        (* which  festival pray for UNESCO’s registration of the intangible heritage ‘Talchum’ )<br><br>
         Tour vouchers are provided twice a year regardless of grade.<br><br>
         <strong>If you donate in Korean won, membership benefits of grades 4-6 will be applied depending on the donation</strong><br>
         <strong>(* donation 20,000 won / 30,000 won / 50,000 won per month)</strong>
