--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
           <strong>대한민국 무형문화유산의 ¼이</strong>생활고 등 어려움으로 <strong>단절 위기</strong>에 처해 있다는 사실을 아시나요?<br>수백 년 동안 이어져 온 우리의 문화가 하루아침에 사라져 버릴 수도 있습니다.
         </p>
         <p>
-          이러한 문제에 심각성을 느낀 저희는, <strong> 무형문화유산 보존 서포터즈</strong><br> ‘탈로워(Tallower)’를 준비했습니다.
+          이러한 문제에 심각성을 느낀 저희는, <strong> 무형문화유산 보존 서포터즈 </strong> <br> ‘탈로워(Tallower)’를 준비했습니다.
         </p>
         <p>
-          ‘탈로워(Tallower)’란 한국의 전통문화를 상징하는 <strong>‘탈(TAL)’</strong>과 <strong>‘팔로워(Follower)’</strong>의 합성어로 Mr. TAL과 가디언즈 NFT를 보유한 홀더를 의미한답니다.
+          <strong> ‘탈로워(Tallower)’</strong>란 한국의 전통문화를 상징하는 <strong>‘탈(TAL)’</strong>과 <strong>‘팔로워(Follower)’</strong>의 합성어로 Mr. TAL과 가디언즈 NFT를 보유한 홀더를 의미한답니다.
         </p>
         <p>‘탈로워’가 되어 무형문화유산 전승자 발굴, 보유단체의 해외공연 후원 등<br><strong>무형문화유산 보존 서포터즈가 되어주세요.</strong></p>
         <a class="accept" onclick="moveToUniverseMo()">수락하기</a>
@@ -136,7 +136,7 @@
           <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100" class="content">수백 년 동안 이어져 온 우리의 문화가 하루아침에 사라져 버릴 수도 있습니다.</p>
           <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" class="content mt">이러한 문제에 심각성을 느낀 저희는,</p>
           <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" class="content"><strong> 무형문화유산 보존 서포터즈</strong>‘탈로워(Tallower)’를 준비했습니다.</p>
-          <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300" class="content mt">‘탈로워(Tallower)’란</p>
+          <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300" class="content mt"><strong>‘탈로워(Tallower)’</strong> 란</p>
           <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300" class="content">한국의 전통문화를 상징하는 <strong>‘탈(TAL)’</strong>과 <strong>‘팔로워(Follower)’</strong>의 합성어로</p>
           <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300" class="content">Mr. TAL과 가디언즈 NFT를 보유한 홀더를 의미한답니다.</p>
           <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400" class="content mt">‘탈로워’가 되어 무형문화유산 전승자 발굴, 보유단체의 해외공연 후원 등</p>
@@ -191,7 +191,7 @@
               </div>
               <div class="container">
                 <img src="./resource/img/pc/universe/u_img_1.jpg">
-                <div class="text">2XXX년, <br><br> 인간의 감정과 문화가 존중받지 못하는 세상. <br> <br>어딜가나 보이는 건 높은 빌딩뿐이다.<br> <br><strong>어디에도 초록빛깔은 존재하지 않는다.</strong> <br><br>미세먼지가 가득한 세상 속에서<br> <br>마스크형 산소호흡기를 쓴 사람들이 거리를 걷는다.</div>
+                <div class="text">2XXX년, <br><br> 인간의 감정과 문화가 존중받지 못하는 세상. <br> <br><strong>어디에도 초록빛깔은 존재하지 않는다.</strong> <br><br>미세먼지가 가득한 세상 속에서<br> <br>마스크형 산소호흡기를 쓴 사람들이 거리를 걷는다.</div>
                 <p class="page">1</p>
               </div>
             </div>
@@ -244,7 +244,7 @@
               </div>
               <div class="container">
                 <img src="./resource/img/pc/universe/u_img_4.jpg">
-                <div class="text">땅에 떨어진다.<br><br>고통은 잠시이고, 호기심과 두려움으로 심장이 두근거린다.<br><br>거대한 동굴 안에서 빛이 새어나온다.<br><br>빛의 출처가 궁금해 들어가보고 싶지만,<br><br>큰 바위가 앞을 가로막고 있다.<br><br>밀어보지만 밀리지가 않아 포기하고 돌아선다.<br><br>그 때 무언가가 옷깃을 붙잡는다.<br><br>뒤를 돌아보면,믿기지 않는 풍경이 눈 앞에 펼쳐져 있다.<br><br><strong>푸른 자연이 가득한 공간 속에 서 있는 말 한 마리</strong><br><strong>‘석마’</strong></div>
+                <div class="text">땅에 떨어진다.<br><br>고통은 잠시이고, 호기심과 두려움으로 심장이 두근거린다.<br><br>빛이 새어나오는 동굴 안을 살짝 보면 <br><br> 믿기지 않는 풍경이 눈 앞에 펼쳐져 있다. <br><br> <strong>푸른 자연이 가득한 공간 속에 서 있는 말 한 마리.‘석마’</strong></div>
                 <p class="page">4</p>
               </div>
             </div>
@@ -261,7 +261,7 @@
               </div>
               <div class="container">
                 <img src="./resource/img/pc/universe/u_img_5.jpg">
-                <div class="text">석마가 구슬 하나를 건넨다.<br><br>구슬 속에는 작은 동물이 그려져 있는데,<br><br>정확하게 어떤 동물인지는 알 수 없다.<br><br>구슬을 들어 햇빛에 비추자 빛이 번쩍인다.<br><br>강한 빛에 정신을 잃는다.<br><br><strong>눈을 뜨자 동그란 얼굴이 눈에 들어온다.</strong><br><br><strong>호기심이 가득한 귀여운 얼굴, 진묘수다.</strong></div>
+                <div class="text"> 석마가 건넨 구슬을 햇빛에 대자  강렬한 빛이 쏟아져 나온다. <br><br> 잠시 후, 눈을 뜨자 동그란 얼굴이 눈에 들어온다.  <br><br> <strong>호기심이 가득한 귀여운 얼굴, 진묘수다.</strong></div>
                 <p class="page">5</p>
               </div>
             </div>
@@ -278,7 +278,7 @@
               </div>
               <div class="container">
                 <img src="./resource/img/pc/universe/u_img_6.jpg">
-                <div class="text">고된 여행길에 지친 몸을 이끌고 옹달샘에 도착해 몸을 뉘인다.<br><br>석마와 진묘수가 당신의 마스크를 벗겨버린다.<br><br>얼굴이 드러나 당황한 당신에게 석마와 진묘수가 상자를 내민다.<br><br>상자를 열자, ‘탈’이 들어 있다.<br><br>탈을 쓰고 옹달샘을 바라본다.<br><br><strong>새로운 ‘나’의 모습이 마음에 든다.</strong></div>
+                <div class="text"> 지친 몸을 이끌고 도착한 옹달샘에서<br><br> 석마와 진묘수가 당신에게 상자를 내민다. <br><br>상자를 열자, ‘탈’이 들어 있다.<br><br>탈을 쓰고 옹달샘을 바라본다.<br><br><strong>새로운 ‘나’의 모습이 마음에 든다.</strong></div>
                 <p class="page">6</p>
               </div>
             </div>
@@ -314,7 +314,7 @@
               </div>
               <div class="container">
                 <img src="./resource/img/pc/universe/u_img_1.jpg">
-                <div class="text">2XXX년,<br>인간의 감정과 문화가 존중받지 못하는 세상.<br>어딜가나 보이는 건 높은 빌딩뿐이다.<br><strong>어디에도 초록빛깔은 존재하지 않는다.</strong><br>미세먼지가 가득한 세상 속에서<br>마스크형 산소호흡기를 쓴 사람들이 거리를 걷는다.</div>
+                <div class="text">2XXX년,<br>인간의 감정과 문화가 존중받지 못하는 세상.<br><strong>어디에도 초록빛깔은 존재하지 않는다.</strong><br>미세먼지가 가득한 세상 속에서<br>마스크형 산소호흡기를 쓴 사람들이 거리를 걷는다.</div>
                 <p class="page">1</p>
               </div>
             </div>
@@ -365,7 +365,7 @@
               </div>
               <div class="container">
                 <img src="./resource/img/pc/universe/u_img_4.jpg">
-                <div class="text">땅에 떨어진다.<br>고통은 잠시이고, 호기심과 두려움으로 심장이 두근거린다.<br>거대한 동굴 안에서 빛이 새어나온다.<br>빛의 출처가 궁금해 들어가보고 싶지만,<br>큰 바위가 앞을 가로막고 있다.<br>밀어보지만 밀리지가 않아 포기하고 돌아선다.<br>그 때 무언가가 옷깃을 붙잡는다.<br>뒤를 돌아보면,<br>믿기지 않는 풍경이 눈 앞에 펼쳐져 있다.<br><strong>푸른 자연이 가득한 공간 속에 서 있는 말 한 마리</strong><br><strong>‘석마’</strong></div>
+                <div class="text">땅에 떨어진다.<br>고통은 잠시이고, 호기심과 두려움으로 심장이 두근거린다.<br> 빛이 새어나오는 동굴 안을 살짝 보면 <br>믿기지 않는 풍경이 눈 앞에 펼쳐져 있다.<br><strong>푸른 자연이 가득한 공간 속에 서 있는 말 한 마리</strong><br><strong>‘석마’</strong></div>
                 <p class="page">4</p>
               </div>
             </div>
@@ -382,7 +382,7 @@
               </div>
               <div class="container">
                 <img src="./resource/img/pc/universe/u_img_5.jpg">
-                <div class="text">석마가 구슬 하나를 건넨다.<br>구슬 속에는 작은 동물이 그려져 있는데,<br>정확하게 어떤 동물인지는 알 수 없다.<br>구슬을 들어 햇빛에 비추자 빛이 번쩍인다.<br>강한 빛에 정신을 잃는다.<br><strong>눈을 뜨자 동그란 얼굴이 눈에 들어온다.</strong><br><strong>호기심이 가득한 귀여운 얼굴, 진묘수다.</strong></div>
+                <div class="text"> 석마가 건넨 구슬을 햇빛에 대자 강렬한 빛이 쏟아져 나온다.<br><strong>잠시 후 눈을 뜨자 동그란 얼굴이 눈에 들어온다.</strong><br><strong>호기심이 가득한 귀여운 얼굴, 진묘수다.</strong></div>
                 <p class="page">5</p>
               </div>
             </div>
@@ -399,7 +399,7 @@
               </div>
               <div class="container">
                 <img src="./resource/img/pc/universe/u_img_6.jpg">
-                <div class="text">고된 여행길에 지친 몸을 이끌고<br>옹달샘에 도착해 몸을 뉘인다.<br>석마와 진묘수가 당신의 마스크를 벗겨버린다.<br>얼굴이 드러나 당황한 당신에게 석마와 진묘수가 상자를 내민다.<br>상자를 열자, ‘탈’이 들어 있다.<br>탈을 쓰고 옹달샘을 바라본다.<br><strong>새로운 ‘나’의 모습이 마음에 든다.</strong></div>
+                <div class="text">  지친 몸을 이끌고 도착한 옹달샘에서 석마와 진묘수가 당신에게 상자를 내민다.<br>상자를 열자, ‘탈’이 들어 있다.<br>탈을 쓰고 옹달샘을 바라본다.<br><strong>새로운 ‘나’의 모습이 마음에 든다.</strong></div>
                 <p class="page">6</p>
               </div>
             </div>
@@ -422,13 +422,13 @@
           NFT는 Mr.TAL과 가디언즈 별 탄생배경, 성격, 특장점에 의해 구성되어 있습니다.<br><strong>세상에 단 하나 밖에 없는 가디언즈는 Mr.TAL인 당신의 곁을 평생 지켜줄 것입니다.</strong>
         </p> -->
         <p data-aos="fade-up" data-aos-duration="1000" class="content">
-          ‘탈로워 (Tallowe)<strong> NFT’는 이더리움을 기반</strong>으로<br>‘Mr.TAL’과 ‘5마리의 가디언즈’의 <strong> 이야기를 담아 발행 예정</strong>입니다.
+          ‘탈로워 (Tallowew)<strong> NFT’는 이더리움을 기반</strong>으로<br>‘Mr.TAL’과 ‘5마리의 가디언즈’의 <strong> 이야기를 담아 발행 예정</strong>입니다.
         </p>
         <p data-aos="fade-up" data-aos-duration="1000" class="content">
-          탈로워는 <strong> 3가지 루트로 가입할 수 있습니다.</strong> <br><br>  첫번째. <strong>크라우드 펀딩</strong> 플랫폼에서 무형문화유산 관련 굿즈를 포함한<br>패키지 형태로 가입 (원화결제)
+          탈로워는 <strong> 3가지 루트로 가입할 수 있습니다.</strong> <br><br>  첫번째. <strong>크라우드 펀딩</strong> 플랫폼에서 무형문화유산 굿즈 등<br>펀딩 상품 구매를 통한 가입  <span class="small">(원화결제)</span>
         </p>
         <p data-aos="fade-up" data-aos-duration="1000" class="content">
-          두번째.  <strong>홈페이지 내 자체 민팅 </strong>을 통한 가입<br>(이더리움 결제, 전자지갑 필요) <br>  <br>세번째. 홈페이지 내  <strong>원화 기부 </strong>를 통한 가입<br>기부영수증 발급 가능, 멤버십 혜택 제공(NFT 전달 불가)
+          두번째.  <strong>홈페이지 내 자체 민팅 </strong>을 통한 가입<br><span class="small">(이더리움 결제, 전자지갑 필요)</span> <br>  <br>세번째. <strong> 홈페이지 내 원화 기부 </strong>를 통한 가입<br><span class="small">(기부영수증 발급 가능, 멤버십 혜택 제공(NFT 전달 불가))</span>
         </p>
         <p data-aos="fade-up" data-aos-duration="1000" class="subcontent">
                   </p>
@@ -517,7 +517,10 @@
           </div>
         </div>
         <p class="content">
-      ‘탈로워 (Tallower)<strong>NFT’는<br>  이더리움을 기반</strong>으로<br>‘Mr.TAL’과 ‘5마리의 가디언즈’의<br><strong>이야기를 담아 발행 예정</strong>입니다.<br><br>탈로워는 <strong>3가지 루트로<br>가입할 수 있습니다.</strong><br><br> 첫번째. <strong>크라우드 펀딩</strong> 플랫폼에서<br>무형문화유산 관련 굿즈를 포함한<br>패키지 형태로 가입 (원화결제)<br><br>두번째.  <strong>홈페이지 내 자체 민팅 </strong>을<br>통한 가입 (이더리움 결제, 전자지갑 필요)<br><br>세번째.  <strong>홈페이지 내 원화 기부 </strong>를 통한 가입<br>기부영수증 발급 가능, 멤버십 혜택 제공(NFT 전달 불가)
+      ‘탈로워 (Tallower)<strong>NFT’는<br>  이더리움을 기반</strong>으로<br>‘Mr.TAL’과 ‘5마리의 가디언즈’의<br><strong>이야기를 담아 발행 예정</strong>입니다.<br><br>탈로워는 <strong>3가지 루트로<br>가입할 수 있습니다.</strong><br><br> 첫번째. <strong>크라우드 펀딩</strong> 플랫폼에서<br>무형문화유산 활용 굿즈 등 <br>펀딩 상품 구매를 통한 가입   <span>(원화결제)</span><br><br>두번째.  <strong>홈페이지 내 자체 민팅 </strong>을<br>통한 가입 <span>(이더리움 결제, 전자지갑 필요)</span><br><br>세번째.  <strong>홈페이지 내 원화 기부 </strong>를 통한 가입<br><span>( 
+기부영수증 발급 가능, 
+멤버십 혜택 제공
+(NFT 전달 불가))</span>
         </p>
         <p class="subcontent">
         
@@ -639,7 +642,7 @@
               <p class="title">타 NFT와 콜라보를 통한 혜택 확대</p>
             </div>
             <div class="item basic">
-              <p class="title">문형문화유산 통합 서비스(SHOP) 오픈</p>
+              <p class="title">무형문화유산 통합 서비스(SHOP) 오픈</p>
             </div>
             <p class="download">
               <a class="container">
@@ -700,7 +703,7 @@
               <p class="title">타 NFT와 콜라보를 통한 혜택 확대</p>
             </div>
             <div class="item basic">
-              <p class="title">문형문화유산 통합 서비스(SHOP) 오픈</p>
+              <p class="title">무형문화유산 통합 서비스(SHOP) 오픈</p>
             </div>
           </div>
           <p class="download">
@@ -722,8 +725,8 @@
         </div> 
         <p data-aos="fade-up" data-aos-duration="1000" class="content light"> 멤버십 등급별 혜택(NFT 조합에 따라 제공)은 추후 변동될 수 있으며,<br>변동사항은 공지를 통해 안내됩니다.</p>
         <p data-aos="fade-up" data-aos-duration="1000" class="content light"> 무형유산  
-‘탈춤‘의 유네스코 등재 기원 축제
-   ‘2022 탈로윈데이’ (10월 예정)는 모든 탈로워 홀더에게 입장권 지급됩니다. <br>관광바우처는 등급별 관련 없이 연 2회 제공됩니다.<br>원화 기부의 경우 기부금(월 2만/3만/5만)에 따라 4-6등급의 멤버십 혜택이 적용됩니다.</p> <br><br><br>
+‘탈춤'의 유네스코 등재 기원 축제
+   ‘2022 탈로윈데이’ (10월 예정)는 모든 NFT 홀더에게 입장권 지급됩니다. <br>관광바우처는 등급과 무관하게 연 2회 제공됩니다. <br>원화 기부의 경우 기부금(월 2만/3만/5만)에 따라 4-6등급의 멤버십 혜택이 적용됩니다.</p> <br><br><br>
         <div class="caption">
           <p><i class="mrtal"></i>Mr. TAL NFT  </p>
           <p><i class="guardians"></i>가디언즈 NFT</p>
@@ -918,8 +921,8 @@
           </div>
         </div>
        <!-- <p data-aos="fade-up" data-aos-duration="1000" class="bottom">무형유산  
-‘탈춤‘의 유네스코 등재 기원 축제
-   ‘2022 탈로윈데이’ (10월 예정)는 모든 탈로워 홀더에게 입장권 지급됩니다.<br>관광바우처는 등급별 관련 없이 연 2회 제공됩니다.<br><strong>원화 기부의 경우 기부금(월 2만/3만/5만)에 따라 4-6등급의 멤버십 혜택이 적용됩니다.</strong></p> -->
+‘탈춤'의 유네스코 등재 기원 축제
+   ‘2022 탈로윈데이’ (10월 예정)는 모든 탈로워 홀더에게 입장권 지급됩니다.<br>관광바우처는 등급과 무관하게 연 2회 제공됩니다. <br><strong>원화 기부의 경우 기부금(월 2만/3만/5만)에 따라 4-6등급의 멤버십 혜택이 적용됩니다.</strong></p> -->
         <div class="buttons">
           <p>원화결제 (기부)</p>
           <p>이더리움 결제</p>
